feat:exercicio2 concluido

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     
     <!-- <script src="exemplo.js"></script> -->
-   <script src="exercicio.js"></script>
+   <script src="exercicio2.js"></script>
 </body>
 </html>
