--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     
     <!-- <script src="exemplo.js"></script> -->
-   <script src="exercicio2.js"></script>
+   <!-- <script src="exercicio1.js"></script> -->
+   <!-- <script src="exercicio2.js"></script> -->
+   <script src="exercicio3.js"></script>
 </body>
 </html>
