--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!-- <script src="exemplo.js"></script> -->
    <!-- <script src="exercicio1.js"></script> -->
    <!-- <script src="exercicio2.js"></script> -->
-   <script src="exercicio3.js"></script>
+   <!-- <script src="exercicio3.js"></script> -->
+   <script src="exercicio4.js"></script>
+   
 </body>
 </html>
