--- a/for-while/exs.html
+++ b/for-while/exs.html
@@ -13,7 +13,7 @@
 
 
 
-6. Imprimir números pares de 0 a 20 utilizando o loop while
+6.
 7. Calcular a soma dos números de 1 a 100 utilizando a estrutura
 while.
 8. Faça um programa que receba a idade do usuário, enquanto a
@@ -28,8 +28,8 @@ a pedir o número se o numero for diferente de 0. -->
      <!-- <script src="ex2for.js"></script> -->
      <!-- <script src="ex3for.js"></script>  -->
     <!-- <script src="ex4for.js"></script> -->
-    <script src="ex5for.js"></script>
-    <!-- <script src="ex1whi.js"></script> -->
+    <!-- <script src="ex5for.js"></script> -->
+    <script src="ex1whi.js"></script>
     <!-- <script src="ex2whi.js"></script> -->
     <!-- <script src="ex3whi.js"></script> -->
     <!-- <script src="ex4whi.js"></script> -->
